[project]
name = "sil-website"
version = "0.1.0"
description = "Semantic Infrastructure Lab public website - building the semantic substrate for trustworthy AI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Scott Senkeresty", email = "scott@semanticinfrastructure.org"}
]
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "reveal-cli>=0.11.0",
    "pytest-httpx>=0.21.0",
    "types-Markdown>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sil_web"]

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
extend-select = ["I"]
ignore = [
    "E501",  # Line too long (handled by formatter, many are in long description strings)
    "N802",  # Function name should be lowercase (extendMarkdown required by python-markdown API)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
